# mikoinstaller

./: .gitignore  BUILD_TEST_RESULTS.md  CMakeLists.txt  LICENSE  main.original.cpp  readme.txt
assets/: resource.rc
packaging/: pack.py
script/: convertresource.cmd
src/: console_main.cpp  main.cpp  nuklear_impl.cpp
src/config/: app_config.h
src/framework/: nuklear.h  nuklear_impl.cpp
src/gui/: installer_window.cpp  installer_window.h  window_utils.cpp  window_utils.h
src/installer/: installation_manager.cpp  installation_manager.h
src/interface/installer/: InstallerWindow.cpp  InstallerWindow.h  format.h  main.cpp
src/interface/uninstall/: UninstallerWindow.cpp  UninstallerWindow.h  main.cpp
src/utils/: system_utils.cpp  system_utils.h
